<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/settings"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bessarez.ecommercemobile.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_productFragment"
            app:destination="@id/nav_product" />
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.bessarez.ecommercemobile.ui.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_wish_list"
        android:name="com.bessarez.ecommercemobile.ui.WishListFragment"
        android:label="@string/menu_wish_list"
        tools:layout="@layout/fragment_wish_list" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.bessarez.ecommercemobile.ui.SettingsFragment"
        android:label="settings" />
    <fragment
        android:id="@+id/nav_product"
        android:name="com.bessarez.ecommercemobile.ui.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product">
        <argument
            android:name="productId"
            app:argType="long" />
        <action
            android:id="@+id/action_nav_product_to_productOrderQuantityDialog"
            app:destination="@id/nav_product_quantity_dialog" />
    </fragment>
    <dialog
        android:id="@+id/nav_product_quantity_dialog"
        android:name="com.bessarez.ecommercemobile.ui.dialogs.ProductOrderQuantityDialog"
        android:label="Quantity" >
        <argument
            android:name="stock"
            app:argType="integer" />
    </dialog>
</navigation>