<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:padding="10dp"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/ordered_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/ordered_at"
        android:textColor="@color/blue_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/blue_gray"
        app:layout_constraintStart_toEndOf="@+id/ordered_at"
        app:layout_constraintTop_toTopOf="@+id/ordered_at" />

    <TextView
        android:id="@+id/order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/order_no"
        android:textColor="@color/blue_gray"
        app:layout_constraintStart_toStartOf="@+id/ordered_at"
        app:layout_constraintTop_toBottomOf="@+id/ordered_at" />

    <TextView
        android:id="@+id/tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/blue_gray"
        app:layout_constraintStart_toEndOf="@+id/order_no"
        app:layout_constraintTop_toTopOf="@+id/order_no" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/regular"
        android:text="@string/total"
        android:textColor="@color/blue_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/money_sign"
        android:textColor="@color/blue_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total_amount"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_amount"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:textColor="@color/blue_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>