<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    style="@style/Theme.AppCompat.Light.NoActionBar">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:scaleType="centerCrop"
        >
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/semibold"
            android:text="@string/create_one"
            android:textColor="@color/s"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/regular"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117" />

        <TextView
            android:id="@+id/tvWriteYourCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/write_down_your_credentials"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
            app:layout_constraintVertical_bias="0.032" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="308dp"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/black_button"
            android:fontFamily="@font/semibold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray_extralight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="308dp"
            android:layout_height="41dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/input_field_login"
            android:drawableStart="@drawable/ic_perm_identity"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:textColorHint="@color/gray_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWriteYourCredentials" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="308dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_field_login"
            android:drawableStart="@drawable/ic_vpn_key"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
            app:layout_constraintVertical_bias="0.031" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>